--- a/src/sass/elements/forms/_inputs.scss
+++ b/src/sass/elements/forms/_inputs.scss
@@ -91,6 +91,7 @@
             ~.input-group-addon {
                 box-shadow: 0 2px 0 $brand-primary;
                 color: $brand-primary;
+                padding: 0;
                 i {
                     color: $brand-primary;
                 }
