--- a/src/sass/page/_card.scss
+++ b/src/sass/page/_card.scss
@@ -109,7 +109,7 @@
         }
 
         .card-description {
-            width: 250px;
+            width: 200px;
             flex-grow: 0;
             flex-shrink: 0;
             margin-right: 30px;
